# majal

./: README.md  demo.tape  pyproject.toml
docs/: index.html  kindle.html
majal/: __init__.py  __main__.py  checks.py  cli.py  display.py  fixer.py  scanner.py
