[project]
name = "majal"
version = "0.1.0"
description = "Arabic Dataset Inspector — scan training data for Arabic-specific quality issues"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Musa the Carpenter" }]
readme = "README.md"
keywords = ["arabic", "dataset", "nlp", "quality", "inspector", "training-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
majal = "majal.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
